k8s-crosslinking-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crosslinking-api
  namespace: xiview
  labels:
    app: crosslinking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crosslinking-api
  template:
    metadata:
      labels:
        app: crosslinking-api
    spec:
      volumes:
        - name: application-db-config
          configMap:
            name: crosslinking-api-config
            items:
              - key: config.ini
                path: database.ini
      containers:
        - name: crosslinking-api
          image: docker-registry.z3ro.one/crosslinking-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: application-db-config
              mountPath: /home/appuser/database.ini
              subPath: database.ini
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: crosslinking-api-service
  namespace: xiview
spec:
  selector:
    app: crosslinking-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
