k8s-xiview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xiview-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Make sure this matches your environment's cluster issuer name
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: "traefik"
  rules:
    - host: xiview.z3ro.one
      http:
        paths:
          # Frontend React UI for Overviews/Uploads
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xiview-frontend-service
                port:
                  number: 80
          # Legacy xiVIEW server explicitly reserved for visualization
          - path: /network.html
            pathType: Exact
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /spectra.html
            pathType: Exact
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /xiview.js
            pathType: Exact
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /vendors.js
            pathType: Exact
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /xiview-pride.css
            pathType: Exact
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /Lato
            pathType: Prefix
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /fontawesome
            pathType: Prefix
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /R
            pathType: Prefix
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: xiview-server-service
                port:
                  number: 80
          - path: /pride/ws/archive/crosslinking/v3/upload_local
            pathType: Exact
            backend:
              service:
                name: xiview-upload-api-service
                port:
                  number: 8090
          - path: /pride
            pathType: Prefix
            backend:
              service:
                name: crosslinking-api-service
                port:
                  number: 8080
  tls:
    - hosts:
        - xiview.z3ro.one
      secretName: xiview-tls-secret
